--- a/pages/blog.html
+++ b/pages/blog.html
@@ -21,7 +21,7 @@
     <section class="hero-image">
       <div class="hero-text">
         <h1 class="top-header">AURORA TOURISM</h1>
-        <h3 class="header-desc">WELCOME TO OUR BLOG POSTS</h3>
+        <h3 class="header-desc">Welcome To Our Blog!</h3>
       </div>
     </section>
     <br>
