--- a/pages/packages.html
+++ b/pages/packages.html
@@ -23,7 +23,7 @@
     </header>
   <section class="hero-image">
 <div class="hero-text">
-  <h1>Aurora Tourism</h1>
+  <h1>AURORA TOURISM</h1>
   <h3>Travel the world with us!</h3>
   </section>
   </div>
