--- a/index.html
+++ b/index.html
@@ -55,56 +55,56 @@
     </div>
 
     <div class="item">
-      <a href="pages/destinations_kualaLumpur.html"><div id="slideshow">
-          <img class="slide" src="images/kualaLumpur/aerial-photography-of-city-during-night-919833.jpg" />
-          <img class="slide" src="images/kualaLumpur/architecture-blue-hour-bridge-buildings-204980.jpg" />
-          <img class="slide" src="images/kualaLumpur/buildings-during-golden-hour-3050018.jpg" />
-          <img class="slide" src="images/kualaLumpur/kuala-lumpur-337677_1920.jpg" />
-          <img class="slide" src="images/kualaLumpur/kuala-lumpur-4049915_1920.jpg" />
+      <a href="pages/destinations_kualaLumpur.html"><div id="slideshow1">
+          <img class="slide1" src="images/kualaLumpur/aerial-photography-of-city-during-night-919833.jpg" />
+          <img class="slide1" src="images/kualaLumpur/architecture-blue-hour-bridge-buildings-204980.jpg" />
+          <img class="slide1" src="images/kualaLumpur/buildings-during-golden-hour-3050018.jpg" />
+          <img class="slide1" src="images/kualaLumpur/kuala-lumpur-337677_1920.jpg" />
+          <img class="slide1" src="images/kualaLumpur/kuala-lumpur-4049915_1920.jpg" />
       </div></a>
       <a href="pages/destinations_kualaLumpur.html"><h4 id="destName">KUALA LUMPUR</h4></a>
     </div>
 
     <div class="item">
-      <a href="pages/destinations_tokyo.html"><div id="slideshow">
-          <img class="slide" src="images/tokyo/aerial-photo-of-people-walking-on-road-3380920.jpg" />
-          <img class="slide" src="images/tokyo/barrels-of-sake-at-meiji-shrine-3800108.jpg" />
-          <img class="slide" src="images/tokyo/paper-lanterns-707670.jpg" />
-          <img class="slide" src="images/tokyo/close-up-of-cherry-blossoms-2187419.jpg" />
-          <img class="slide" src="images/tokyo/senso-ji-temple-3380968.jpg" />
+      <a href="pages/destinations_tokyo.html"><div id="slideshow2">
+          <img class="slide2" src="images/tokyo/aerial-photo-of-people-walking-on-road-3380920.jpg" />
+          <img class="slide2" src="images/tokyo/barrels-of-sake-at-meiji-shrine-3800108.jpg" />
+          <img class="slide2" src="images/tokyo/paper-lanterns-707670.jpg" />
+          <img class="slide2" src="images/tokyo/close-up-of-cherry-blossoms-2187419.jpg" />
+          <img class="slide2" src="images/tokyo/senso-ji-temple-3380968.jpg" />
       </div></a>
       <a href="pages/destinations_tokyo.html"><h4 id="destName">TOKYO</h4></a>
     </div>
 
     <div class="item">
-      <a href="pages/destinations_paris.html"><div id="slideshow">
-        <img class="slide" src="images/paris/ancient-architecture-attraction-buildings-548077.jpg" />
-        <img class="slide" src="images/paris/arch-architecture-art-building-208241.jpg" />
-        <img class="slide" src="images/paris/assorted-colour-umbrellas-2462918.jpg" />
-        <img class="slide" src="images/paris/brown-concrete-church-interior-2178696.jpg" />
-        <img class="slide" src="images/paris/white-concrete-building-1460145.jpg" />
+      <a href="pages/destinations_paris.html"><div id="slideshow3">
+        <img class="slide3" src="images/paris/ancient-architecture-attraction-buildings-548077.jpg" />
+        <img class="slide3" src="images/paris/arch-architecture-art-building-208241.jpg" />
+        <img class="slide3" src="images/paris/assorted-colour-umbrellas-2462918.jpg" />
+        <img class="slide3" src="images/paris/brown-concrete-church-interior-2178696.jpg" />
+        <img class="slide3" src="images/paris/white-concrete-building-1460145.jpg" />
       </div></a>
       <a href="pages/destinations_paris.html"><h4 id="destName">PARIS</h4></a>
     </div>
 
     <div class="item">
-      <a href="pages/destinations_singapore.html"><div id="slideshow">
-        <img class="slide" src="images/singapore/aerial-shot-of-buildings-near-ocean-1682794.jpg" />
-        <img class="slide" src="images/singapore/architecture-building-illuminated-night-290597.jpg" />
-        <img class="slide" src="images/singapore/gardens-by-the-bay-singapore-1842332.jpg" />
-        <img class="slide" src="images/singapore/green-leafed-plants-inside-greenhouse-2426546.jpg" />
-        <img class="slide" src="images/singapore/marina-bay-sands-3914755.jpg" />
+      <a href="pages/destinations_singapore.html"><div id="slideshow4">
+        <img class="slide4" src="images/singapore/aerial-shot-of-buildings-near-ocean-1682794.jpg" />
+        <img class="slide4" src="images/singapore/architecture-building-illuminated-night-290597.jpg" />
+        <img class="slide4" src="images/singapore/gardens-by-the-bay-singapore-1842332.jpg" />
+        <img class="slide4" src="images/singapore/green-leafed-plants-inside-greenhouse-2426546.jpg" />
+        <img class="slide4" src="images/singapore/marina-bay-sands-3914755.jpg" />
       </div></a>
       <a href="pages/destinations_singapore.html"><h4 id="destName">SINGAPORE</h4></a>
     </div>
 
     <div class="item">
-      <a href="pages/destinations_norway.html"><div id="slideshow">
-          <img class="slide" src="images/norway/aerial-photography-of-city-beside-sea-3019893.jpg" />
-          <img class="slide" src="images/norway/aurora-borealis-1933239.jpg" />
-          <img class="slide" src="images/norway/buildings-near-body-of-water-3916014.jpg" />
-          <img class="slide" src="images/norway/empty-road-2058728.jpg" />
-          <img class="slide" src="images/norway/photo-of-houses-beside-river-4050814.jpg" />
+      <a href="pages/destinations_norway.html"><div id="slideshow5">
+          <img class="slide5" src="images/norway/aerial-photography-of-city-beside-sea-3019893.jpg" />
+          <img class="slide5" src="images/norway/aurora-borealis-1933239.jpg" />
+          <img class="slide5" src="images/norway/buildings-near-body-of-water-3916014.jpg" />
+          <img class="slide5" src="images/norway/empty-road-2058728.jpg" />
+          <img class="slide5" src="images/norway/photo-of-houses-beside-river-4050814.jpg" />
       </div></a>
       <a href="pages/destinations_norway.html"><h4 id="destName">NORWAY</h4></a>
     </div>
