--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,6 +5,7 @@
     <title>AURORA TOURISM | BLOG</title>
     <link rel="stylesheet" href="../styles/blog.css">
     <script src="https://use.fontawesome.com/fdf05d22fc.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   </head>
   <body>
     <header>
@@ -21,7 +22,7 @@
     <section class="hero-image">
       <div class="hero-text">
         <h1 class="top-header">AURORA TOURISM</h1>
-        <h3 class="header-desc">Welcome To Our Blog!</h3>
+        <h3 class="header-desc">WELCOME TO OUR BLOG POSTS</h3>
       </div>
     </section>
     <br>
@@ -41,8 +42,21 @@
 
     <h3 class="follow-header">Follow Aurora..</h3>
     <p class="paragraph">Get new content delivered directly to your inbox.</p>
-    <button class="button" type="submit">Subscribe</button>
+    <div class="wrap">
+      <div>
+        <input type="checkbox" id="toggle" />
+        <label class="button"  for="toggle" >
+        </label>
+      </div>
+      <div class="parent">
+        <div class="text sub">Subscribe Now </div>
+        <div class="text thanks">Thanks for Subscribing </div>
+      </div>
+    </div>
     <br><br>
+
+    <script src="../js/posts.js"></script>
+
   </body>
   <footer>
     <div class="footer">
