--- a/pages/penang.html
+++ b/pages/penang.html
@@ -5,6 +5,7 @@
     <title>AURORA TOURISM | TIMELESS VILLAGE IN PENANG</title>
     <link rel="stylesheet" href="../styles/penang.css">
     <script src="https://use.fontawesome.com/fdf05d22fc.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   </head>
   <header>
       <nav>
@@ -37,11 +38,23 @@
     <hr>
 
     <h3 class="reply">LEAVE A REPLY</h3>
-    <textarea class="comment" name="comment" placeholder="Enter your comment here..."></textarea>
-    <br>
-    <button class="button" type="submit" name="button">Submit</button>
-    <br>
+    <div class="form">
+      <input type="text" class="name" id="name" placeholder="Enter your name." required> <br>
+      <textarea class="comment" name="comment" id="bodyText" placeholder="Enter your comment here..." required></textarea>
+      <br>
+      <input type="button" class="button" id="addComment" name="button" value="Submit">
+      <br>
+    </div>
 
+    <hr>
+
+    <div id="container">
+
+    </div>
+
+    <hr>
+
+    <script src="../js/post.js"></script>
   </body>
   <footer>
     <div class="footer">
