--- a/pages/penang.html
+++ b/pages/penang.html
@@ -54,7 +54,7 @@
 
     <hr>
 
-    <script src="../js/post.js"></script>
+    <script src="../javascript/post.js"></script>
   </body>
   <footer>
     <div class="footer">
