--- a/pages/plan.html
+++ b/pages/plan.html
@@ -64,7 +64,7 @@
 
       <hr>
 
-      <script src="../js/post.js"></script>
+      <script src="../javascript/post.js"></script>
 
   </body>
   <footer>
