--- a/pages/blog.html
+++ b/pages/blog.html
@@ -55,7 +55,7 @@
     </div>
     <br><br>
 
-    <script src="../javascript/posts.js"></script>
+    <script src="../javascript/blog.js"></script>
 
   </body>
   <footer>
