--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,6 +15,7 @@
             <li><a href="destinations.html">Destinations</a></li>
             <li><a href="packages.html">Packages</a></li>
             <li><a href="#">Blog</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="contact_Us.html">Contact Us</a></li>
           </ul>
         </nav>
