--- a/pages/contact_Us.html
+++ b/pages/contact_Us.html
@@ -15,6 +15,7 @@
           <li><a href="destinations.html">Destinations</a></li>
           <li><a href="packages.html">Packages</a></li>
           <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </nav>
