--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="pages/destinations.html">Destinations</a></li>
             <li><a href="pages/packages.html">Packages</a></li>
             <li><a href="pages/blog.html">Blog</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="pages/contact_Us.html">Contact Us</a></li>
           </ul>
         </nav>
