--- a/pages/penang.html
+++ b/pages/penang.html
@@ -14,6 +14,7 @@
           <li><a href="destinations.html">Destinations</a></li>
           <li><a href="packages.html">Packages</a></li>
           <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="contact_Us.html">Contact Us</a></li>
         </ul>
       </nav>
