--- a/pages/packages.html
+++ b/pages/packages.html
@@ -42,22 +42,24 @@
     <div class="content">
       <img class="chobi" src="../images/igloo.jpg" alt="Mountains" style="width:100%">
       <h4>Kakslauttanen Arctic Resort</h4>
-      <p>Kakslauttanen is one of the best places in the world to wonder at the magical glow of the Northern Lights. Up there the season is an incredible eight months long, from late August until late April. As long as it’s dark and the skies are clear, there’s always a chance to marvel at the miraculous aurora...
-</p>
+      <p>Kakslauttanen is one of the best places in the world <span id="dots1">...</span><span id="more1">to wonder at the magical glow of the Northern Lights. Up there the season is an incredible eight months long, from late August until late April. As long as it’s dark and the skies are clear, there’s always a chance to marvel at the miraculous aurora.</span></p>
+<button onclick="myFunction1()" id="myBtn1">Read more</button>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <img class="chobi" src="../images/people-walking-on-street-near-buildings-2339009.jpg" alt="Lights" style="width:100%">
       <h4>Street of Tokyo</h4>
-      <p>Tokyo: Japan's sprawling capital city, with a reputation for variety that attracts travelers the world over. Whether you're visiting for business or leisure, to glimpse into history at the Imperial Palace and its many cherry-blossom-studded shrines, or to peek into the future in districts like electronic paradise Akihabra and edgy, fashionable Shinjuku, Tokyo will cater to almost every curiosity...</p>
+      <p>Tokyo: Japan's sprawling capital city, with a reputation for<span id="dots2">...</span><span id="more2"> variety that attracts travelers the world over. Whether you're visiting for business or leisure, to glimpse into history at the Imperial Palace and its many cherry-blossom-studded shrines, or to peek into the future in districts like electronic paradise Akihabra and edgy, fashionable Shinjuku, Tokyo will cater to almost every curiosity</span></p>
+<button onclick="myFunction2()" id="myBtn2">Read more</button>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <img class="chobi" src="../images/Mount-Kirkjufell,-Iceland-_GettyImages-1005489826.jpg" alt="Nature" style="width:100%">
       <h4>Mount-Kirkjufell</h4>
-      <p>This dazzling "Church Mountain" near the town of Grundarfjörður is Iceland's most photographed mountain, and for good reason—it's one of the best places to see the Northern Lights in the country. Bonus: The landmark served as a very important filming location in Season 7 of Game of Thrones...</p>
+      <p>This dazzling "Church Mountain" near the town of <span id="dots3">...</span><span id="more3">Grundarfjörður is Iceland's most photographed mountain, and for good reason—it's one of the best places to see the Northern Lights in the country. Bonus: The landmark served as a very important filming location in Season 7 of Game of Thrones.</span></p>
+<button onclick="myFunction3()" id="myBtn3">Read more</button>
     </div>
   </div>
 
@@ -65,25 +67,44 @@
     <div class="content">
       <img class="chobi" src="../images/Lofoten-Islands-_GettyImages-583610815.jpg" alt="Car" style="width:100%">
       <h4>Lofoten-Islands</h4>
-      <p>It takes some time and energy to reach the Lofoten Islands, just off of Norway's northwestern coast, but you won't regret making the effort. Once there, you'll find clear blue waters that rival the Mediterranean and craggy mountains that are reminiscent of Iceland, plus unparalleled fjords and frozen beaches...</p>
+      <p>It takes some time and energy to reach the Lofoten Islands<span id="dots4">...</span><span id="more4">just off of Norway's northwestern coast, but you won't regret making the effort. Once there, you'll find clear blue waters that rival the Mediterranean and craggy mountains that are reminiscent of Iceland, plus unparalleled fjords and frozen beaches.</span></p>
+<button onclick="myFunction4()" id="myBtn4">Read more</button>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <img class="chobi" src="../images/hagia-sophia-museum-3969150.jpg" alt="Car" style="width:100%">
       <h4>Hagia Sophia</h4>
-      <p>The gorgeous Hagia Sophia, formerly Church of the Divine Wisdom, was built as a cathedral in 537, then later converted to a mosque after the Ottoman’s conquest of Istanbul.  Today it serves as a museum that showcases the influence of multiple ruling empires and their religions over the region...</p>
+      <p>The gorgeous Hagia Sophia, formerly Church of the Divine <span id="dots5">...</span><span id="more5">Wisdom, was built as a cathedral in 537, then later converted to a mosque after the Ottoman’s conquest of Istanbul.  Today it serves as a museum that showcases the influence of multiple ruling empires and their religions over the region.</span></p>
+<button onclick="myFunction5()" id="myBtn5">Read more</button>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <img class="chobi" src="../images/Lapland,-Finland_GettyImages-962970318.jpg" alt="Car" style="width:100%">
       <h4>Lapland</h4>
-      <p>With its stark white landscapes, frequent Northern Lights sightings, and a reindeer population that outnumbers humans, Finnish Lapland is like an enchanted, frozen fairytale in real life. We suggest cozying up at the Arctic TreeHouse Hotel, where you'll be welcomed with a hot mug of glogg and can spend hours gazing through the northern facing, floor-to-ceiling window in your guest room. Visit in the summer to catch a glimpse of the midnight sun.
-..</p>
+      <p>With its stark white landscapes, frequent Northern<span id="dots6">...</span><span id="more6"> Lights sightings, and a reindeer population that outnumbers humans, Finnish Lapland is like an enchanted, frozen fairytale in real life. We suggest cozying up at the Arctic TreeHouse Hotel, where you'll be welcomed with a hot mug of glogg and can spend hours gazing through the northern facing, floor-to-ceiling window in your guest room. Visit in the summer to catch a glimpse of the midnight sun.
+      </span></p>
+      <button onclick="myFunction6()" id="myBtn6">Read more</button>
     </div>
   </div>
 
+
+<!-- END GRID -->
+</div>
+<script src="../javascript/package.js">
+
+</script>
+  </body>
+  <footer>
+    <div class="footer">
+      <a href="#"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a>
+      <p> ® copyright 2020 | AURORA TOURISM</p>
+    </div>
+  </footer>
+</html>
 
 <!-- END GRID -->
 </div>
