--- a/pages/packages.html
+++ b/pages/packages.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Packages</title>
+    <title>AuroraTourism/Packages</title>
 <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
   <script src="https://use.fontawesome.com/fdf05d22fc.js"></script>
     <link rel="stylesheet" href="../styles/package.css">
+    <link rel="stylesheet" href="../styles/nav.css">
   </head>
   <body>
     <header>
